include/ups/upscaledb.h


struct ups_cursor_t;
typedef struct ups_cursor_t ups_cursor_t;
typedef struct {
  uint32_t size;
  void *data;
  uint32_t flags;
  uint32_t partial_offset;
  uint32_t partial_size;
} ups_record_t;
typedef struct {
  uint16_t size;
  void *data;
  uint32_t flags;
  uint32_t _flags;
} ups_key_t;
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_move(ups_cursor_t *cursor, ups_key_t *key,
            ups_record_t *record, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_overwrite(ups_cursor_t *cursor, ups_record_t *record,
            uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_find(ups_cursor_t *cursor, ups_key_t *key,
            ups_record_t *record, uint32_t flags);
#define UPS_FIND_LT_MATCH               0x1000
#define UPS_FIND_GT_MATCH               0x2000
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_insert(ups_cursor_t *cursor, ups_key_t *key,
            ups_record_t *record, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_erase(ups_cursor_t *cursor, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_get_duplicate_count(ups_cursor_t *cursor,
            uint32_t *count, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_close(ups_cursor_t *cursor);