dotnet/upscaledb-dotnet/NativeMethods.cs


    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_move",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern int CursorMoveLow(IntPtr handle,
        ref KeyStruct key, IntPtr record, int flags);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_move",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern int CursorMoveLow(IntPtr handle,
        IntPtr key, ref RecordStruct record, int flags);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_move",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern int CursorMoveLow(IntPtr handle,
        ref KeyStruct key, ref RecordStruct record, int flags);

    static public int CursorMove(IntPtr handle, int flags) {
      return CursorMoveLow(handle, IntPtr.Zero, IntPtr.Zero, flags);
    }

    static unsafe public byte[] CursorGetRecord(IntPtr handle, int flags) {
      RecordStruct record = new RecordStruct();
      int st = CursorMoveLow(handle, IntPtr.Zero, ref record, flags);
      if (st == 0) {
        // I didn't found a way to avoid the copying...
        IntPtr recData = new IntPtr(record.data);
        byte[] newArray = new byte[record.size];
        Marshal.Copy(recData, newArray, 0, record.size);
        return newArray;
      }
      throw new DatabaseException(st);
    }

    static unsafe public byte[] CursorGetKey(IntPtr handle, int flags) {
      KeyStruct key = new KeyStruct();
      int st = CursorMoveLow(handle, ref key, IntPtr.Zero, flags);
      if (st == 0) {
        // I didn't found a way to avoid the copying...
        IntPtr keyData = new IntPtr(key.data);
        byte[] newArray = new byte[key.size];
        Marshal.Copy(keyData, newArray, 0, key.size);
        return newArray;
      }
      throw new DatabaseException(st);
    }

    static unsafe public int CursorGet(IntPtr handle, int flags, ref byte[] keyArray, ref byte[] recordArray)
    {
        KeyStruct key = new KeyStruct();
        RecordStruct record = new RecordStruct();
        int st = CursorMoveLow(handle, ref key, ref record, flags);
        if (st == 0)
        {
            IntPtr keyData = new IntPtr(key.data);
            keyArray = new byte[key.size];
            Marshal.Copy(keyData, keyArray, 0, key.size);

            IntPtr recData = new IntPtr(record.data);
            recordArray = new byte[record.size];
            Marshal.Copy(recData, recordArray, 0, record.size);
        }
        return st;
    }

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_overwrite",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern int CursorOverwriteLow(IntPtr handle,
        ref RecordStruct record, int flags);

    static unsafe public int CursorOverwrite(IntPtr handle, byte[] data, int flags) {
      RecordStruct record = new RecordStruct();
      fixed (byte* b = data) {
        record.data = b;
        record.size = data.GetLength(0);
        return CursorOverwriteLow(handle, ref record, flags);
      }
    }

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_find",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern int CursorFindLow(IntPtr handle,
        ref KeyStruct key, ref RecordStruct record, int flags);

    static unsafe public int CursorFind(IntPtr handle, ref byte[] keydata,
                            ref byte[] recdata, int flags) {
      KeyStruct key = new KeyStruct();
      RecordStruct record = new RecordStruct();

      fixed (byte* bk = keydata) {
        key.data = bk;
        key.size = (short)keydata.Length;
        int st = CursorFindLow(handle, ref key, ref record, flags);
        if (st != 0)
          return st;
        // I didn't found a way to avoid the copying...
        IntPtr recData = new IntPtr(record.data);
        byte[] newRecData = new byte[record.size];
        Marshal.Copy(recData, newRecData, 0, record.size);
        recdata = newRecData;
        // also copy the key data if approx. matching was requested
        if ((flags & (UpsConst.UPS_FIND_LT_MATCH | UpsConst.UPS_FIND_GT_MATCH)) != 0) {
          IntPtr keyData = new IntPtr(key.data);
          byte[] newKeyData = new byte[key.size];
          Marshal.Copy(keyData, newKeyData, 0, key.size);
          keydata = newKeyData;
        }
        return 0;
      }
    }

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_insert",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern int CursorInsertLow(IntPtr handle,
        ref KeyStruct key, ref RecordStruct record, int flags);

    static public unsafe int CursorInsert(IntPtr handle,
            byte[] keyData, byte[] recordData, int flags) {
      RecordStruct record = new RecordStruct();
      KeyStruct key = new KeyStruct();
      fixed (byte *br = recordData, bk = keyData) {
        record.data = br;
        record.size = recordData.GetLength(0);
        key.data = bk;
        key.size = (short)keyData.GetLength(0);
        return CursorInsertLow(handle, ref key, ref record, flags);
      }
    }

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_erase",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern int CursorErase(IntPtr handle, int flags);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_get_duplicate_count",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern int CursorGetDuplicateCount(IntPtr handle, out int count,
        int flags);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "ups_cursor_close",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern int CursorClose(IntPtr handle);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "uqi_result_get_row_count",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern int ResultGetRowCount(IntPtr handle);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "uqi_result_get_key_type",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern int ResultGetKeyType(IntPtr handle);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "uqi_result_get_record_type",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern int ResultGetRecordType(IntPtr handle);

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "uqi_result_get_key",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern void ResultGetKeyLow(IntPtr handle,
        int row, ref KeyStruct key);

    static unsafe public byte[] ResultGetKey(IntPtr handle, int row) {
        KeyStruct key = new KeyStruct();
        ResultGetKeyLow(handle, row, ref key);
        IntPtr pdata = new IntPtr(key.data);
        byte[] data = new byte[key.size];
        Marshal.Copy(pdata, data, 0, key.size);
        return data;
    }

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "uqi_result_get_record",
       CallingConvention = CallingConvention.Cdecl)]
    static private extern void ResultGetRecordLow(IntPtr handle,
        int row, ref RecordStruct record);

    static unsafe public byte[] ResultGetRecord(IntPtr handle, int row) {
        RecordStruct record = new RecordStruct();
        ResultGetRecordLow(handle, row, ref record);
        IntPtr pdata = new IntPtr(record.data);
        byte[] data = new byte[record.size];
        Marshal.Copy(pdata, data, 0, record.size);
        return data;
    }

    [DllImport("upscaledb-2.2.0.dll", EntryPoint = "uqi_result_close",
       CallingConvention = CallingConvention.Cdecl)]
    static public extern void ResultClose(IntPtr handle);
  }
}
